// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/border-beam/demo/basic.tsx correctly 1`] = `
<div
  class="ant-border-beam css-var-test-id"
  style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#4096ff;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:5.5s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px;--ant-border-beam-beam-path-radius:84px;--ant-border-beam-beam-size:84px;--ant-border-beam-border-width:2px;width:360px"
>
  <div
    class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
    style="padding:24px;border-radius:20px;border:1px solid #f0f0f0;background:#ffffff;gap:8px"
  >
    <h4
      class="ant-typography css-var-test-id"
      style="margin:0"
    >
      Workspace overview
    </h4>
    <span
      class="ant-typography ant-typography-secondary css-var-test-id"
    >
      Review task status, deployment health, and recent automation activity in one panel.
    </span>
  </div>
  <div
    aria-hidden="true"
    class="ant-border-beam-beam"
  />
</div>
`;

exports[`renders components/border-beam/demo/component-token.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-wrap-wrap"
  style="gap:24px"
>
  <div
    class="ant-border-beam css-var-test-id"
    style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#4096ff;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:6s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px;--ant-border-beam-beam-path-radius:84px;--ant-border-beam-beam-size:84px;--ant-border-beam-border-width:1px;width:320px"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
      style="padding:24px;border-radius:20px;border:1px solid #f0f0f0;background:#ffffff;gap:8px"
    >
      <h4
        class="ant-typography css-var-test-id"
        style="margin:0"
      >
        Default token
      </h4>
      <span
        class="ant-typography ant-typography-secondary css-var-test-id"
      >
        Uses the default BorderBeam component token values derived from the current theme.
      </span>
    </div>
    <div
      aria-hidden="true"
      class="ant-border-beam-beam"
    />
  </div>
  <div
    class="ant-border-beam css-var-test-id"
    style="--ant-border-beam-beam-color-from:#fa541c;--ant-border-beam-beam-color-to:#13c2c2;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:6s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px;--ant-border-beam-beam-path-radius:84px;--ant-border-beam-beam-size:84px;--ant-border-beam-border-width:3px;width:320px"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
      style="padding:24px;border-radius:20px;border:1px solid #f0f0f0;background:#ffffff;gap:8px"
    >
      <h4
        class="ant-typography css-var-test-id"
        style="margin:0"
      >
        Custom token
      </h4>
      <span
        class="ant-typography ant-typography-secondary css-var-test-id"
      >
        Override beamColorFrom, beamColorTo, and borderBeamWidth from theme.components.BorderBeam.
      </span>
    </div>
    <div
      aria-hidden="true"
      class="ant-border-beam-beam"
    />
  </div>
</div>
`;

exports[`renders components/border-beam/demo/controlled.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
  style="gap:16px"
>
  <div
    class="ant-flex css-var-test-id ant-flex-wrap-wrap"
    style="gap:12px"
  >
    <button
      aria-checked="false"
      class="ant-switch css-var-test-id"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          Paused
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          Running
        </span>
      </span>
    </button>
    <button
      aria-checked="false"
      class="ant-switch css-var-test-id"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          Disabled
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          Enabled
        </span>
      </span>
    </button>
  </div>
  <div
    class="ant-border-beam css-var-test-id"
    style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#4096ff;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:6s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px;--ant-border-beam-beam-path-radius:84px;--ant-border-beam-beam-size:84px;--ant-border-beam-border-width:2px;width:360px"
  >
    <div
      class="ant-card ant-card-bordered css-var-test-id"
      style="border-radius:20px"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Release monitor
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        Track dependency changes, build status, and deployment health from a single place.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="ant-border-beam-beam"
    />
  </div>
</div>
`;

exports[`renders components/border-beam/demo/customized-color.tsx correctly 1`] = `
<div
  class="ant-border-beam css-var-test-id"
  style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#36cfc9;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:5s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px;--ant-border-beam-beam-path-radius:80px;--ant-border-beam-beam-size:80px;--ant-border-beam-border-width:2px;width:360px"
>
  <div
    class="ant-card ant-card-bordered css-var-test-id"
    style="border-radius:20px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          AI Assistant
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      Let agents summarize information, review code, and handle repetitive work for your team.
    </div>
  </div>
  <div
    aria-hidden="true"
    class="ant-border-beam-beam"
  />
</div>
`;

exports[`renders components/border-beam/demo/non-uniform-radius.tsx correctly 1`] = `
<div
  class="ant-border-beam css-var-test-id"
  style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#4096ff;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:5.5s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:20px 20px 0 0;--ant-border-beam-beam-path-radius:84px 84px 84px 84px;--ant-border-beam-beam-size:84px;--ant-border-beam-border-width:2px;width:360px"
>
  <div
    class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
    style="border-radius:20px 20px 0 0;border:1px solid #f0f0f0;overflow:hidden;background:#ffffff;box-shadow:0 1px 2px 0 rgba(0,0,0,0.03),
      0 1px 6px -1px rgba(0,0,0,0.02),
      0 2px 4px 0 rgba(0,0,0,0.02)"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
      style="padding:24px;background:linear-gradient(135deg, #e6f4ff, #ffffff);gap:8px"
    >
      <h4
        class="ant-typography css-var-test-id"
        style="margin:0"
      >
        Activity stream
      </h4>
      <span
        class="ant-typography ant-typography-secondary css-var-test-id"
      >
        Use a multi-value \`pathRadius\` like \`20px 20px 0 0\` to keep the beam aligned with non-uniform corners.
      </span>
    </div>
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-space-between"
      style="padding:16px 24px"
    >
      <span
        class="ant-typography css-var-test-id"
      >
        <strong>
          12 running jobs
        </strong>
      </span>
      <button
        class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          View queue
        </span>
      </button>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="ant-border-beam-beam"
  />
</div>
`;

exports[`renders components/border-beam/demo/radius.tsx correctly 1`] = `
<div
  class="ant-border-beam css-var-test-id"
  style="--ant-border-beam-beam-color-from:#1677ff;--ant-border-beam-beam-color-to:#4096ff;--ant-border-beam-beam-delay:0s;--ant-border-beam-beam-duration:6s;--ant-border-beam-beam-offset-end:100%;--ant-border-beam-beam-offset-start:0%;--ant-border-beam-beam-anchor:90%;--ant-border-beam-beam-clip-radius:24px;--ant-border-beam-beam-path-radius:88px;--ant-border-beam-beam-size:88px;--ant-border-beam-border-width:2px;width:360px"
>
  <div
    class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-vertical"
    style="padding:24px;border-radius:24px;border:1px solid #f0f0f0;background:#ffffff;gap:16px"
  >
    <h4
      class="ant-typography css-var-test-id"
      style="margin:0"
    >
      Sign in
    </h4>
    <input
      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
      placeholder="Email"
      type="text"
      value=""
    />
    <span
      class="ant-input-affix-wrapper ant-input-outlined ant-input-password css-var-test-id ant-input-css-var"
    >
      <input
        class="ant-input"
        placeholder="Password"
        type="password"
        value=""
      />
      <span
        class="ant-input-suffix"
      >
        <span
          aria-disabled="false"
          aria-label="Show"
          aria-pressed="false"
          class="ant-input-password-icon"
          role="button"
          tabindex="0"
        >
          <span
            aria-label="eye-invisible"
            class="anticon anticon-eye-invisible"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="eye-invisible"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
              />
              <path
                d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
    <button
      class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
      type="button"
    >
      <span>
        Continue
      </span>
    </button>
  </div>
  <div
    aria-hidden="true"
    class="ant-border-beam-beam"
  />
</div>
`;
